Define details of the sidebar

--- a/index.html
+++ b/index.html
@@ -10,5 +10,18 @@
         <div id="player"></div>
         <!-- enemies -->
     </div>
+    <div id="sidebar">
+        <h2>Level: <span id="levels">1</span></h2>
+        <h2>Score: <span id="scores">0</span></h2>
+        <h2>Lives: <span id="lives">3</span></h2>
+        <h2>Time: <span id="timer">0</span>s</h2>
+        <h3>Controls:</h3>
+        <p>␣ : shoot</p>
+        <p>← : move left</p>
+        <p>→ : move right</p>
+        <p>p : pause</p>
+        <p>c : continue</p>
+        <p>r : restart</p>
+    </div>
 </body>
 </html>
