[feat]: implement function restartGame that resets variables and restarts the game

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         <p>c : continue</p>
         <p>r : restart</p>
     </div>
+
+    <!-- Pause Menu -->
+     <div id="pauseMenu">
+        <h2>PAUSED</h2>
+        <button id="continueButton">Continue</button>
+        <button id="restartButton">Restart</button>
+     </div>
+     
     <script type="module" src="main.mjs"></script>
 </body>
 </html>
