--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
         <button id="continueButton">Continue</button>
         <button id="restartButton">Restart</button>
      </div>
-     
+     <audio id="explosionSound" src="sounds/explosion.mp3"></audio>
+     <audio id="shootSound" src="sounds/shoot.mp3"></audio>  
+     <audio id="gameOverSound" src="/sounds/gameover.mp3"></audio>
+     <audio id="hitSound" src="/sounds/hit.mp3"></audio>   
     <script type="module" src="main.mjs"></script>
+
 </body>
 </html>
