fix: game over alert display over game and hide on restart feat: recentre player on respawning and lives left

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <p>r : restart</p>
     </div>
 
+    <div id="gameOver">Game Over! Press Enter to Restart</div>
+
     <!-- Pause Menu -->
      <div id="pauseMenu">
         <h2>PAUSED</h2>
