feat: add start menu

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     </div>
 
     <div id="gameOver">Game Over! Press Enter to Restart</div>
+    <div class="start-menu">
+        <h1>Choose a Map</h1>
+        <button id="map1Button">Map 1</button>
+        <button id="map2Button">Map 2</button>
+        <button id="map3Button">Map 3</button>
+    </div>
 
     <!-- Pause Menu -->
      <div id="pauseMenu">
