fix: correct the instruction for the continuee button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>← : move left</p>
         <p>→ : move right</p>
         <p>p : pause</p>
-        <p>c : continue</p>
+        <p>p : continue</p>
         <p>r : restart</p>
     </div>
 
