feat: add welcome message

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <div id="gameOver">Game Over! Press Enter to Restart</div>
     <div class="start-menu">
-        <h1>Choose a Map</h1>
+        <h1>Space Invaders</h1>
+        <h2>Choose a Map:</h2>
         <button id="map1Button">Map 1</button>
         <button id="map2Button">Map 2</button>
         <button id="map3Button">Map 3</button>
