feat: create a scoreboard table for the scores

--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
         <p>r : restart</p>
     </div>
 
+    <div class="scoreboard">
+        <h2>Scoreboard</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Rank</th>
+                    <th>Name</th>
+                    <th>Score</th>
+                    <th>Time</th>
+                </tr>
+            </thead>
+            
+        </table>
+    </div>
+
     <div id="gameOver">Game Over! Press Enter to Restart</div>
     <div class="start-menu">
         <h1>Space Invaders</h1>
