feat: create a table body that will be populated by the scoreboard

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <h1>Welcome to Space Invaders</h1>
     <div id="gameContainer">
     </div>
     <div id="sidebar">
@@ -24,6 +25,7 @@
     </div>
 
     <div class="scoreboard">
+        Game Over! Press Enter to Restart
         <h2>Scoreboard</h2>
         <table>
             <thead>
@@ -34,11 +36,13 @@
                     <th>Time</th>
                 </tr>
             </thead>
-            
+            <tbody>
+                <!-- Scoreboard rows will be populated here -->
+            </tbody>
         </table>
     </div>
 
-    <div id="gameOver">Game Over! Press Enter to Restart</div>
+    <div id="gameOver"></div>
     <div class="start-menu">
         <h1>Space Invaders</h1>
         <h2>Choose a Map:</h2>
