feat: add a input area for the player name

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <div class="start-menu">
         <h1>Space Invaders</h1>
         <h2>Choose a Map:</h2>
+        <input type="text" id="playerName" placeholder="Enter your name" maxlength="20">
         <button id="map1Button">Map 1</button>
         <button id="map2Button">Map 2</button>
         <button id="map3Button">Map 3</button>
