feat: create a pagination division for the page navigation

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <!-- Scores will be inserted here -->
             </tbody>
         </table>
+        <div class="pagination"></div>
     </div>
     
 
