chore: create a submit section for the submit score

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
     </div>
 
     <div class="scoreboard">
-        Press ENTER to restart
-        <h2>Scoreboard</h2>
-        <input type="text" id="scoreNameInput" placeholder="Enter your name" maxlength="20">
-        <button id="submitScoreButton">Submit Score</button>
+        <h3>Press ENTER to restart</h3>
+        <h2>Game Over - Final Score</h2>
+        <div id="submitSection">
+            <input type="text" id="scoreNameInput" placeholder="Enter your name" maxlength="20">
+            <button id="submitScoreButton">Submit Score</button>
+        </div>
         <table>
             <thead>
                 <tr>
