chore: add units for the time on the scoreboard

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <th>Rank</th>
                     <th>Name</th>
                     <th>Score</th>
-                    <th>Time</th>
+                    <th>Time(Secs)</th>
                 </tr>
             </thead>
             <tbody id="scoreTableBody">
