[fix]: handle multiple bugs encountered when integrating history screens in the game, including:
- dismiss final score rank before offering game map selection during restart
- enemy shoot interval, and potentially other game variables not reset after game completion
- displaying gameover doesn't stop the timer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h3>Press ENTER to restart</h3>
         <h2>Game Over - Final Score</h2>
         <div id="submitSection">
-            <input type="text" id="scoreNameInput" placeholder="Enter your name" maxlength="20">
+            <input type="text" id="scoreNameInput" placeholder="Enter your name" maxlength="20" required>
             <button id="submitScoreButton">Submit Score</button>
         </div>
         <table>
